# openai-sdk

./: CMakeLists.txt  LICENSE  README.md  README.zh-CN.md
cmake/: openai_compat_options.cmake
include/openai/: openai.hpp
schemas/: openai-contracts.schema.json
src/capabilities/: resolve.cpp  validate.cpp
tests/: CMakeLists.txt  fixture_io.hpp  openai_capabilities_test.cpp  openai_chat_completions_codec_test.cpp  openai_compat_codec_test.cpp  openai_compat_test.cpp  openai_completions_codec_test.cpp  openai_contract_schema_test.cpp  openai_core_serialization_test.cpp  openai_embeddings_models_codec_test.cpp  openai_fixture_corpus_test.cpp  openai_responses_codec_test.cpp  openai_roundtrip_test.cpp  openai_streaming_codec_test.cpp  openai_wire_parser_test.cpp  schema_validation.hpp  test_main.cpp  test_support.hpp
tests/fixtures/chat_completions/: chunk-tool-call.json  request-basic.json  request-multimodal.json  response-basic.json
tests/fixtures/compat/: error-envelope.json  generic-object.json  list-envelope.json
tests/fixtures/completions/: chunk-basic.json  request-basic.json  request-token-batch.json  response-basic.json
tests/fixtures/embeddings/: request-basic.json  request-token-batch.json  response-base64.json
tests/fixtures/invalid/chat_completions/: chunk-choices-not-array.json  request-messages-not-array.json
tests/fixtures/invalid/compat/: list-data-not-array.json
tests/fixtures/invalid/completions/: request-missing-prompt.json
tests/fixtures/invalid/embeddings/: request-heterogeneous-input.json
tests/fixtures/invalid/models/: list-created-string.json
tests/fixtures/invalid/responses/: request-stream-options-string.json  response-output-not-array.json
tests/fixtures/invalid/streaming/: event-type-not-string.json
tests/fixtures/models/: list-basic.json  list-extended.json  model-basic.json
tests/fixtures/responses/: request-basic.json  request-tooling.json  response-basic.json  response-tooling.json  response-unknown-item.json
tests/fixtures/streaming/: response-created.sse  response-rich.sse
(+51 files in other folders)
